--- a/src/patternfly/components/Pagination/pagination.scss
+++ b/src/patternfly/components/Pagination/pagination.scss
@@ -2,49 +2,24 @@
 $pf-v5-c-pagination--breakpoint-map: build-breakpoint-map();
 $pf-v5-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl");
 
-.#{$pagination} {
+:root {
   --#{$pagination}--inset: 0;
-  --#{$pagination}--PaddingRight: var(--#{$pagination}--inset);
-  --#{$pagination}--PaddingLeft: var(--#{$pagination}--inset);
-
+  --#{$pagination}--ColumnGap: var(--pf-t--global--spacer--lg);
+  
   // Page insets
-  --#{$pagination}--m-page-insets--inset: var(--#{$pf-global}--spacer--md);
-  --#{$pagination}--m-page-insets--xl--inset: var(--#{$pf-global}--spacer--lg);
-
-  // children
-  --#{$pagination}--child--MarginRight: var(--#{$pf-global}--spacer--lg);
-  --#{$pagination}--m-bottom--child--MarginRight: 0;
-  --#{$pagination}--m-bottom--child--md--MarginRight: var(--#{$pf-global}--spacer--lg);
-  --#{$pagination}--m-compact--child--MarginRight: var(--#{$pf-global}--spacer--sm);
-
-  // dropdown
-  --#{$pagination}--c-menu-toggle--FontSize: var(--#{$pf-global}--FontSize--sm);
-
+  --#{$pagination}--m-page-insets--inset: var(--pf-t--global--spacer--md);
+  --#{$pagination}--m-page-insets--xl--inset: var(--pf-t--global--spacer--lg);
+  
   // nav
   --#{$pagination}__nav--Display: none;
   --#{$pagination}--m-display-summary__nav--Display: none;
   --#{$pagination}--m-display-full__nav--Display: inline-flex;
-
-  // nav control
-  --#{$pagination}__nav-control--c-button--PaddingRight: var(--#{$pf-global}--spacer--sm);
-  --#{$pagination}__nav-control--c-button--PaddingLeft: var(--#{$pf-global}--spacer--sm);
-  --#{$pagination}__nav-control--c-button--FontSize: var(--#{$pf-global}--FontSize--md);
-  --#{$pagination}--m-bottom__nav-control--c-button--OutlineOffset: calc(var(--#{$pf-global}--spacer--xs) * -1);
-  --#{$pagination}--m-bottom__nav-control--c-button--PaddingTop: var(--#{$pf-global}--spacer--md);
-  --#{$pagination}--m-bottom__nav-control--c-button--PaddingBottom: var(--#{$pf-global}--spacer--md);
-  --#{$pagination}--m-bottom__nav-control--c-button--PaddingRight: var(--#{$pf-global}--spacer--md);
-  --#{$pagination}--m-bottom__nav-control--c-button--md--PaddingTop: var(--#{$pf-global}--spacer--form-element);
-  --#{$pagination}--m-bottom__nav-control--c-button--md--PaddingRight: var(--#{$pf-global}--spacer--sm);
-  --#{$pagination}--m-bottom__nav-control--c-button--md--PaddingBottom: var(--#{$pf-global}--spacer--form-element);
-  --#{$pagination}--m-bottom__nav-control--c-button--md--PaddingLeft: var(--#{$pf-global}--spacer--sm);
-  --#{$pagination}--m-compact__nav-control--nav-control--MarginLeft: var(--#{$pf-global}--spacer--md);
+  --#{$pagination}__nav--ColumnGap: var(--pf-t--global--spacer--sm);
 
   // nav page select
-  --#{$pagination}__nav-page-select--FontSize: var(--#{$pf-global}--FontSize--sm);
-  --#{$pagination}__nav-page-select--PaddingLeft: var(--#{$pf-global}--spacer--md);
-  --#{$pagination}__nav-page-select--PaddingRight: var(--#{$pf-global}--spacer--md);
-  --#{$pagination}__nav-page-select--child--MarginRight: var(--#{$pf-global}--spacer--xs);
-  --#{$pagination}__nav-page-select--c-form-control--width-base: calc(var(--#{$pf-global}--spacer--sm) * 2 + var(--#{$pf-global}--BorderWidth--sm) * 2);
+  --#{$pagination}__nav-page-select--FontSize: var(--pf-t--global--font--size--body--md);
+  --#{$pagination}__nav-page-select--ColumnGap: var(--pf-t--global--spacer--sm);
+  --#{$pagination}__nav-page-select--c-form-control--width-base: calc(var(--pf-t--global--spacer--sm) * 2 + var(--pf-t--global--border--width--100) * 2); // TODO: replace border width token with semantic token
   --#{$pagination}__nav-page-select--c-form-control--width-chars: 2;
   --#{$pagination}__nav-page-select--c-form-control--Width: calc(var(--#{$pagination}__nav-page-select--c-form-control--width-base) + (var(--#{$pagination}__nav-page-select--c-form-control--width-chars) * 1ch));
 
@@ -54,89 +29,69 @@ $pf-v5-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
   --#{$pagination}--m-display-full__total-items--Display: none;
 
   // top
-  --#{$pagination}--m-sticky--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
-  --#{$pagination}--m-sticky--BoxShadow: var(--#{$pf-global}--BoxShadow--sm-bottom);
-  --#{$pagination}--m-sticky--md--PaddingTop: var(--#{$pf-global}--spacer--md);
-  --#{$pagination}--m-sticky--md--PaddingRight: var(--#{$pf-global}--spacer--md);
-  --#{$pagination}--m-sticky--md--PaddingBottom: var(--#{$pf-global}--spacer--md);
-  --#{$pagination}--m-sticky--md--PaddingLeft: var(--#{$pf-global}--spacer--md);
-  --#{$pagination}--m-sticky--ZIndex: var(--#{$pf-global}--ZIndex--xs);
+  --#{$pagination}--m-sticky--BackgroundColor: var(--pf-t--global--background--color--primary--default);
+  --#{$pagination}--m-sticky--BoxShadow: var(--pf-t--global--box-shadow--sm--bottom);
+  --#{$pagination}--m-sticky--PaddingTop: var(--pf-t--global--spacer--md);
+  --#{$pagination}--m-sticky--PaddingRight: var(--pf-t--global--spacer--lg);
+  --#{$pagination}--m-sticky--PaddingBottom: var(--pf-t--global--spacer--md);
+  --#{$pagination}--m-sticky--PaddingLeft: var(--pf-t--global--spacer--lg);
+  --#{$pagination}--m-sticky--ZIndex: 100; // TODO: replace with z-index token
   --#{$pagination}--m-sticky--Top: 0;
 
   // bottom
-  --#{$pagination}--m-bottom--BackgroundColor: var(--#{$pf-global}--BackgroundColor--100);
-  --#{$pagination}--m-bottom--BoxShadow: var(--#{$pf-global}--BoxShadow--sm-top);
+  --#{$pagination}--m-bottom--BackgroundColor: var(--pf-t--global--background--color--primary--default);
+  --#{$pagination}--m-bottom--BoxShadow: var(--pf-t--global--box-shadow--sm--top);
   --#{$pagination}--m-bottom--Bottom: 0;
-  --#{$pagination}--m-bottom--md--PaddingTop: var(--#{$pf-global}--spacer--md);
-  --#{$pagination}--m-bottom--md--PaddingRight: var(--#{$pf-global}--spacer--md);
-  --#{$pagination}--m-bottom--md--PaddingBottom: var(--#{$pf-global}--spacer--md);
-  --#{$pagination}--m-bottom--md--PaddingLeft: var(--#{$pf-global}--spacer--md);
-  --#{$pagination}--m-bottom--xl--PaddingRight: var(--#{$pf-global}--spacer--lg);
-  --#{$pagination}--m-bottom--xl--PaddingLeft: var(--#{$pf-global}--spacer--lg);
-  --#{$pagination}--m-bottom--m-sticky--BoxShadow: var(--#{$pf-global}--BoxShadow--sm-top);
+  --#{$pagination}--m-bottom--PaddingRight: var(--pf-t--global--spacer--lg);
+  --#{$pagination}--m-bottom--PaddingLeft: var(--pf-t--global--spacer--lg);
+  --#{$pagination}--m-bottom--md--PaddingTop: var(--pf-t--global--spacer--md);
+  --#{$pagination}--m-bottom--md--PaddingBottom: var(--pf-t--global--spacer--md);
+  --#{$pagination}--m-bottom--xl--PaddingRight: var(--pf-t--global--spacer--lg);
+  --#{$pagination}--m-bottom--xl--PaddingLeft: var(--pf-t--global--spacer--lg);
+  --#{$pagination}--m-bottom--m-sticky--BoxShadow: var(--pf-t--global--box-shadow--sm--top);
 
   // options menu
-  --#{$pagination}--c-menu-toggle--Display: none;
-  --#{$pagination}--m-display-summary--c-menu-toggle--Display: none;
-  --#{$pagination}--m-display-full--c-menu-toggle--Display: inline-flex;
+  --#{$pagination}__page-menu--Display: none;
+  --#{$pagination}--m-display-summary__page-menu--Display: none;
+  --#{$pagination}--m-display-full__page-menu--Display: inline-flex;
 
   @media screen and (min-width: $pf-v5-global--breakpoint--md) {
-    --#{$pagination}--m-bottom__nav-control--c-button--PaddingTop: var(--#{$pagination}--m-bottom__nav-control--c-button--md--PaddingTop);
-    --#{$pagination}--m-bottom__nav-control--c-button--PaddingRight: var(--#{$pagination}--m-bottom__nav-control--c-button--md--PaddingRight);
-    --#{$pagination}--m-bottom__nav-control--c-button--PaddingBottom: var(--#{$pagination}--m-bottom__nav-control--c-button--md--PaddingBottom);
-    --#{$pagination}--m-bottom__nav-control--c-button--PaddingLeft: var(--#{$pagination}--m-bottom__nav-control--c-button--md--PaddingLeft);
-    --#{$pagination}--m-bottom--child--MarginRight: var(--#{$pagination}--m-bottom--child--md--MarginRight);
-    --#{$pagination}--m-bottom__nav-control--c-button--OutlineOffset: 0;
     --#{$pagination}--m-bottom--BoxShadow: none;
-    --#{$pagination}--c-menu-toggle--Display: inline-flex;
+    --#{$pagination}__page-menu--Display: inline-flex;
     --#{$pagination}__nav--Display: inline-flex;
     --#{$pagination}__total-items--Display: none;
   }
 
   @media screen and (min-width: $pf-v5-global--breakpoint--xl) {
-    --#{$pagination}--m-bottom--md--PaddingRight: var(--#{$pagination}--m-bottom--xl--PaddingRight);
-    --#{$pagination}--m-bottom--md--PaddingLeft: var(--#{$pagination}--m-bottom--xl--PaddingLeft);
+    --#{$pagination}--m-bottom--PaddingRight: var(--#{$pagination}--m-bottom--xl--PaddingRight);
+    --#{$pagination}--m-bottom--PaddingLeft: var(--#{$pagination}--m-bottom--xl--PaddingLeft);
     --#{$pagination}__scroll-button--Width: var(--#{$pagination}__scroll-button--xl--Width);
     --#{$pagination}--m-page-insets--inset: var(--#{$pagination}--m-page-insets--xl--inset);
   }
+}
 
+.#{$pagination} {
   display: flex;
   flex-wrap: wrap;
+  column-gap: var(--#{$pagination}--ColumnGap);
   align-items: center;
   justify-content: flex-end;
-  padding-inline-start: var(--#{$pagination}--PaddingLeft);
-  padding-inline-end: var(--#{$pagination}--PaddingRight);
+  padding-inline-start: var(--#{$pagination}--inset);
+  padding-inline-end: var(--#{$pagination}--inset);
 
-  // stylelint-disable selector-not-notation
-  // update to single :not() in breaking change
-  > *:not(:last-child):not(.#{$pagination}__total-items) {
-    margin-inline-end: var(--#{$pagination}--child--MarginRight);
-  }
-
-  .#{$menu-toggle} {
-    display: var(--#{$pagination}--c-menu-toggle--Display);
-    font-size: var(--#{$pagination}--c-menu-toggle--FontSize);
+  .#{$pagination}__page-menu {
+    display: var(--#{$pagination}__page-menu--Display);
   }
 
   &.pf-m-bottom {
-    --#{$pagination}--child--MarginRight: var(--#{$pagination}--m-bottom--child--MarginRight);
-    --#{$pagination}__nav-control--c-button--PaddingRight: var(--#{$pagination}--m-bottom__nav-control--c-button--PaddingRight);
-    --#{$pagination}__nav-control--c-button--PaddingLeft: var(--#{$pagination}--m-bottom__nav-control--c-button--PaddingRight);
     --#{$pagination}--m-sticky--BoxShadow: var(--#{$pagination}--m-bottom--m-sticky--BoxShadow);
     --#{$pagination}--m-sticky--Top: auto;
 
-    .#{$pagination}__nav-control {
-      .#{$button} {
-        --#{$button}--PaddingTop: var(--#{$pagination}--m-bottom__nav-control--c-button--PaddingTop);
-        --#{$button}--PaddingBottom: var(--#{$pagination}--m-bottom__nav-control--c-button--PaddingBottom);
-
-        outline-offset: var(--#{$pagination}--m-bottom__nav-control--c-button--OutlineOffset);
-      }
-    }
-
     position: sticky;
-   inset-block-end: var(--#{$pagination}--m-bottom--Bottom);
+    inset-block-end: var(--#{$pagination}--m-bottom--Bottom);
     justify-content: center;
+    padding-inline-start: var(--#{$pagination}--m-bottom--PaddingLeft);
+    padding-inline-end: var(--#{$pagination}--m-bottom--PaddingRight);
     background-color: var(--#{$pagination}--m-bottom--BackgroundColor);
     box-shadow: var(--#{$pagination}--m-bottom--BoxShadow);
 
@@ -154,7 +109,7 @@ $pf-v5-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
       display: none;
     }
 
-    .#{$menu-toggle} {
+    .#{$pagination}__page-menu {
       position: absolute;
       display: block;
     }
@@ -174,8 +129,6 @@ $pf-v5-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
       justify-content: flex-end;
       padding-block-start: var(--#{$pagination}--m-bottom--md--PaddingTop);
       padding-block-end: var(--#{$pagination}--m-bottom--md--PaddingBottom);
-      padding-inline-start: var(--#{$pagination}--m-bottom--md--PaddingLeft);
-      padding-inline-end: var(--#{$pagination}--m-bottom--md--PaddingRight);
 
       .#{$pagination}__nav-control.pf-m-first,
       .#{$pagination}__nav-control.pf-m-last,
@@ -187,7 +140,7 @@ $pf-v5-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
         display: inline-flex;
       }
 
-      .#{$menu-toggle} {
+      .#{$pagination}__page-menu {
         position: relative;
       }
 
@@ -210,17 +163,6 @@ $pf-v5-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
     padding-inline-end: var(--#{$pagination}--m-sticky--PaddingRight);
     background-color: var(--#{$pagination}--m-sticky--BackgroundColor);
     box-shadow: var(--#{$pagination}--m-sticky--BoxShadow);
-
-    @media screen and (min-width: $pf-v5-global--breakpoint--md) {
-      padding-block-start: var(--#{$pagination}--m-sticky--md--PaddingTop);
-      padding-block-end: var(--#{$pagination}--m-sticky--md--PaddingBottom);
-      padding-inline-start: var(--#{$pagination}--m-sticky--md--PaddingLeft);
-      padding-inline-end: var(--#{$pagination}--m-sticky--md--PaddingRight);
-    }
-  }
-
-  &.pf-m-compact {
-    --#{$pagination}--child--MarginRight: var(--#{$pagination}--m-compact--child--MarginRight);
   }
 
   &.pf-m-page-insets {
@@ -232,38 +174,24 @@ $pf-v5-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
 // nav
 .#{$pagination}__nav {
   display: var(--#{$pagination}__nav--Display);
+  column-gap: var(--#{$pagination}__nav--ColumnGap);
   justify-content: flex-end;
 }
 
 // nav control
 .#{$pagination}__nav-control {
   @include pf-v5-mirror-inline-on-rtl;
-
-  .#{$button} {
-    padding-inline-start: var(--#{$pagination}__nav-control--c-button--PaddingLeft);
-    padding-inline-end: var(--#{$pagination}__nav-control--c-button--PaddingRight);
-    font-size: var(--#{$pagination}__nav-control--c-button--FontSize);
-  }
-
-  .#{$pagination}.pf-m-compact & + & {
-    margin-inline-start: var(--#{$pagination}--m-compact__nav-control--nav-control--MarginLeft);
-  }
 }
 
 // nav page element
 .#{$pagination}__nav-page-select {
   display: flex;
+  column-gap: var(--#{$pagination}__nav-page-select--ColumnGap);
   align-items: center;
-  padding-inline-start: var(--#{$pagination}__nav-page-select--PaddingLeft);
-  padding-inline-end: var(--#{$pagination}__nav-page-select--PaddingRight);
 
   > * {
     font-size: var(--#{$pagination}__nav-page-select--FontSize);
     white-space: nowrap;
-
-    &:not(:last-child) {
-      margin-inline-end: var(--#{$pagination}__nav-page-select--child--MarginRight);
-    }
   }
 
   .#{$form-control} {
@@ -288,13 +216,13 @@ $pf-v5-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
     @include pf-v5-apply-breakpoint($breakpoint) {
       &.pf-m-display-summary#{$breakpoint-name} {
         --#{$pagination}__nav--Display: var(--#{$pagination}--m-display-summary__nav--Display);
-        --#{$pagination}--c-menu-toggle--Display: var(--#{$pagination}--m-display-summary--c-menu-toggle--Display);
+        --#{$pagination}__page-menu--Display: var(--#{$pagination}--m-display-summary__page-menu--Display);
         --#{$pagination}__total-items--Display: var(--#{$pagination}--m-display-summary__total-items--Display);
       }
 
       &.pf-m-display-full#{$breakpoint-name} {
         --#{$pagination}__nav--Display: var(--#{$pagination}--m-display-full__nav--Display);
-        --#{$pagination}--c-menu-toggle--Display: var(--#{$pagination}--m-display-full--c-menu-toggle--Display);
+        --#{$pagination}__page-menu--Display: var(--#{$pagination}--m-display-full__page-menu--Display);
         --#{$pagination}__total-items--Display: var(--#{$pagination}--m-display-full__total-items--Display);
       }
 
@@ -307,10 +235,3 @@ $pf-v5-c-pagination--variable-map: build-spacer-map("none", "sm", "md", "lg", "x
   }
 }
 // stylelint-enable
-
-// stylelint-disable no-invalid-position-at-import-rule
-@import "themes/dark/pagination";
-
-@include pf-v5-theme-dark {
-  @include pf-v5-theme-dark-pagination;
-}
