--- a/src/patternfly/base/tokens/_tokens-font.scss
+++ b/src/patternfly/base/tokens/_tokens-font.scss
@@ -147,6 +147,7 @@
     var(--pf-t--global--box-shadow--color--lg);
 
   // Transitions
+  // These are the old way and will likely be removed
   --pf-t--global--transition: all 250ms cubic-bezier(.42, 0, .58, 1);
   --pf-t--global--transition--timing-function: cubic-bezier(.645, .045, .355, 1);
   --pf-t--global--transition--duration: 250ms;
