chore(Badge/MenuToggle): updated styling

--- a/src/patternfly/components/Breadcrumb/breadcrumb.scss
+++ b/src/patternfly/components/Breadcrumb/breadcrumb.scss
@@ -29,7 +29,9 @@
   --#{$breadcrumb}__menu-toggle--MarginInlineEnd: calc(var(--#{$breadcrumb}__item--MarginInlineEnd) * -1);
   --#{$breadcrumb}__menu-toggle--MarginBlockEnd: calc(var(--pf-t--global--spacer--control--vertical--default) * -1);
   --#{$breadcrumb}__menu-toggle--MarginInlineStart: calc(var(--#{$breadcrumb}__item-divider--MarginInlineEnd) * -1);
-
+  --#{$breadcrumb}__dropdown--c-menu-toggle--PaddingBlockStart: 0;
+  --#{$breadcrumb}__dropdown--c-menu-toggle--PaddingBlockEnd: 0;
+  
   // breadcrumb toggle
   --#{$breadcrumb}__menu-toggle--c-menu-toggle--LineHeight: var(--pf-t--global--font--line-height--body);
 }
@@ -117,6 +119,11 @@
 
   .#{$menu-toggle} {
     line-height: var(--#{$breadcrumb}__menu-toggle--c-menu-toggle--LineHeight);
+  }
+
+  .#{$menu-toggle} {
+    padding-block-start: var(--#{$breadcrumb}__dropdown--c-menu-toggle--PaddingBlockStart);
+    padding-block-end: var(--#{$breadcrumb}__dropdown--c-menu-toggle--PaddingBlockEnd);
   }
 }
 
